# space

./: .dockerignore  .gitignore  ARQUITETURA.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT_SETUP.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  STRUCTURE.md  baselinadebug.txt  docker-compose.yml  echo_test.lua  entrypoint.sh  install.sh  main_server.py  pyproject.toml  safe_rules.sh  space_architecture.md  space_database.db  space_project_management.md  tcp_client_benchmark.py
.github/ISSUE_TEMPLATE/: CONTRIBUTING.md  issue-padrao.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
config/: init_db.py  route_loader.py  routes.json
core/: http_response.py  http_types.py  interfaces.py  jwt_handler.py  logger_setup.py  session_manager.py  settings.py  templating.py  user_db.py  waf.py
deploy/: production.env.ex  space-python.service  space-rust.service
docs/: ARQUITETURA.md  CONTRIBUTING.md  DEPLOYMENT.md  PERFORMANCE.md  PROJECT_DASHBOARD.md  SETUP.md  architecture.md  extras.txt  python_guidelines.md  setup_environment.md  system_robustness.md
handlers/: http_handler.py  route_handlers.py
py_core/src/: main.py
py_core/src/adapters/: asgi.py  wsgi.py
py_core/src/handlers/: cookie_handler.py  http_handler.py  route_handlers.py
py_core/src/ipc/: protocol.py
py_core/src/routing/: router.py
py_core/src/security/: jwt_handler.py  waf.py
py_core/src/utils/: http_response.py
py_core/wfc/: my_custom_app.py
py_core/wfp/: minimal_wsgi_app.py
py_core/wsd/: profile.html
routes/: router.py
rs_core/: Cargo.toml
rs_core/certs/: cert.pem  key.pem
rs_core/src/: config.rs  error.rs  lib.rs
rs_core/src/ipc/: mod.rs  protocol.rs
rs_core/src/network/: mod.rs
rust_core/space_core/: Cargo.toml  build.rs  cert.pem  ipc_client.py  key.pem  messages_pb2.py  openssl_config.cnf
rust_core/space_core/certs/: cert.pem  key.pem
rust_core/space_core/proto/: messages.proto
rust_core/space_core/src/: config.rs  handlers.rs  ipc.rs  main.rs  messages.rs  metrics.rs  packets.rs  tls.rs
space_py/ipc_client/: client.py
works/wse/: index.html
