[package]
name = "rs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
socket2 = "0.5"

# Adicione este bloco inteiro no final do seu Cargo.toml
[profile.release]
debug = true