[package]
name = "rs_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
socket2 = "0.5"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum = "0.7" # Um web framework simples para expor as métricas

# Adicione este bloco inteiro no final do seu Cargo.toml
[profile.release]
debug = true