[package]
name = "rs_core"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
socket2 = "0.5"
num_cpus = "1.16"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
axum = "0.7"
rustls = { version = "0.23", features = ["ring"] }
tokio-rustls = "0.25"
rustls-pemfile = "2.1"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
thiserror = "1.0"

# Adicione este bloco inteiro no final do seu Cargo.toml
[profile.release]
debug = true