# space/rust_core/space_core/Cargo.toml

[package]
name = "space_core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Dependências gerais e de runtime
tokio = { version = "1.38.0", features = ["full", "rt-multi-thread", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
once_cell = "1.19.0"
governor = { version = "0.10.0", features = ["std"] }
socket2 = { version = "0.5.6", features = ["all"] }
bytes = "1.6.0"
libc = "0.2.153"

# Dependências HTTP e Rand
hyper = { version = "0.14.27", features = ["full"] }
rand = "0.8.5" # Mantido 0.8.5 conforme o log fixou para evitar que o Cargo atualize.

# Dependências de profiling e métricas
pprof = { version = "0.13.0", features = ["flamegraph", "prost-codec"], optional = true }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.2" # Ajustado para 0.12.2, para bater com o que o Cargo baixou.

# Dependências para TLS/SSL
tokio-rustls = "0.26.2" # Ajustado para a versão que o Cargo baixou.
rustls = { version = "0.23.0", features = ["ring"] } # Ajustado para 0.23 para tentar unificar.
webpki-roots = "0.26.0" # Manter esta versão, se 0.26.x for compatível com rustls 0.23
rustls-pemfile = "2.2.0" # Manter esta versão.
rustls-pki-types = "0.1.0" # Manter esta versão, pois as correções já a consideram.

# Para tratamento de erros mais fácil
anyhow = "1.0.8"

# Gerenciamento de Variáveis de Ambiente e Configuração
envy = "0.4.2"
serde = { version = "1.0.203", features = ["derive"] }

# Para parsing básico de HTTP (se estiver fazendo um parser manual ou proxy)
httparse = "1.8.0"

# Para parsing de bytes (usado em `packets.rs` para leituras manuais)
byteorder = "1.5.0"

# NOVAS DEPENDÊNCIAS PARA SOCKET RAW E PARSING DE PACOTES DE REDE
pnet = "0.34.0"
pnet_packet = "0.34.0"

[profile.release]
debug = true

[features]
default = []
pprof = ["dep:pprof"]